[tool.poetry]
name = "Finnish Administrative Boundaries in GeoJSON"
version = "0.1.0"
description = "Finnish Administrative Boundaries in GeoJSON"
authors = ["Sami Laine" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.14.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
