[tool.poetry]
name = "hallinnollisetrajat"
version = "0.1.1"
description = "Finnish Administrative Boundaries in GeoJSON"
authors = ["Sami Laine" ]
readme = "README.md"
# See https://github.com/python-poetry/poetry/pull/8650
#package-mode = false

[tool.poetry.dependencies]
python = ">= 3.11, < 3.12"
geopandas = "^0.14.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
